--- a/public/css/msignup.css
+++ b/public/css/msignup.css
@@ -3,9 +3,6 @@
 }
 * {
      box-sizing: border-box;
-     margin: 0;
-     padding: 0;
-     border: 0;
 }
 a:hover {
      color: orange;
@@ -45,21 +42,15 @@ select {
      cursor: pointer;
 }
 .container {
-     width: 90%;
-     border-radius: 30px;
-     height: 100vh;
+     width: 100%;
+     height: 100%;
      padding:  20px 20px 30px 30px;
      opacity: 0.8;
      background: url(formBack.png) no-repeat center center fixed;
      -webkit-background-size: cover;
      -moz-background-size: cover;
      -o-background-size: cover;
-     background-size: cover;
-     top: 50%;
-     left: 50%;
-     position: absolute;
-     -webkit-transform: transform(-50%,-50%);
-     transform: translateX(-50%) translateY(-50%);
+     background-size: cover;   
 }
 
 h1 {
@@ -74,7 +65,6 @@ h2 {
      font-size: 14px;
      color: white;
      letter-spacing: 1px;
-     padding: 4px 0 4px 0
 }
 
 .input-box input {
