--- a/public/css/mlogin.css
+++ b/public/css/mlogin.css
@@ -88,7 +88,7 @@ h2 {
      opacity: 0.7;
      color: white;
      padding: 2px;
-     border: 3px solid white;
+     border: 3px solid orange;
      border-radius: 6px;
      text-align: center;
      font-family: "Poppins";
