--- a/public/css/mlogin.css
+++ b/public/css/mlogin.css
@@ -38,7 +38,10 @@ html {
      -o-background-size: cover;
      background-size: cover;
      position: absolute;
-     transform: translateX(12%) translateY(20%);
+     top: 50%;
+     left:50%;
+     transform: translateX(-50%) translateY(-50%);
+     /*transform: translateX(12%) translateY(20%);*/
 }
 
 h1 {
