--- a/public/css/mlogin.css
+++ b/public/css/mlogin.css
@@ -32,11 +32,11 @@ html {
      border-radius: 30px;
      padding:  20px 20px 30px 30px;
      opacity: 0.8;
-     background: url(formBack.png) no-repeat center center fixed;
+     /*background: url(formBack.png) no-repeat center center fixed;
      -webkit-background-size: cover;
      -moz-background-size: cover;
      -o-background-size: cover;
-     background-size: cover;
+     background-size: cover;*/
      position: absolute;
      transform: translateX(12%) translateY(20%);
 }
