--- a/public/css/mlogin.css
+++ b/public/css/mlogin.css
@@ -32,6 +32,7 @@ html {
      border-radius: 30px;
      padding:  20px 20px 30px 30px;
      opacity: 0.8;
+     background: linear-gradient(to bottom right, #2c3e50 0%, #bdc3c7 100%);
      /*background: url(formBack.png) no-repeat center center fixed;
      -webkit-background-size: cover;
      -moz-background-size: cover;
