--- a/public/css/mlogin.css
+++ b/public/css/mlogin.css
@@ -41,7 +41,7 @@ html {
      position: absolute;
      top: 50%;
      left: 50%;
-     transform: translateX(-50%) translate (-50%);
+     transform: translateX(-50%) translateY(-50%);
      /*transform: translateX(12%) translateY(20%);*/
 }
 
