--- a/public/css/msignup.css
+++ b/public/css/msignup.css
@@ -43,14 +43,15 @@ select {
 }
 .container {
      width: 100%;
-     height: 100%;
+     height: 100vh;
      padding:  20px 20px 30px 30px;
      opacity: 0.8;
-     background: url(formBack.png) no-repeat center center fixed;
+     background: linear-gradient(to bottom right, #2c3e50 0%, #bdc3c7 100%);
+     /*background: url(formBack.png) no-repeat center center fixed;
      -webkit-background-size: cover;
      -moz-background-size: cover;
      -o-background-size: cover;
-     background-size: cover;   
+     background-size: cover;*/   
 }
 
 h1 {
