--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -35,8 +35,8 @@ a {
      /*background-size: cover;
      background-attachment: fixed;
      background-position: center;
-     background-repeat: no-repeat;
-     transform: translateY(0%);*/
+     background-repeat: no-repeat;*/
+     transform: translateY(0%);
 }
 h1 {
      font-family: "Poppins";
