--- a/public/css/msignup.css
+++ b/public/css/msignup.css
@@ -46,6 +46,7 @@ select {
      /*height: 100%;*/
      padding:  20px 20px 30px 30px;
      opacity: 0.8;
+     border-radius: 30px;
      background: linear-gradient(to bottom right, #2c3e50 0%, #bdc3c7 100%);
      top: 50%;
      left: 50%;
