--- a/public/css/selectOption.css
+++ b/public/css/selectOption.css
@@ -1,7 +1,108 @@
-a:hover {
-     color: orange;
+body {
+     margin: 0;
 }
 
+.topnav {
+     overflow: hidden;
+     background-color: black;
+     font-family: "Courier New", Courier, monospace;
+}
+
+.topnav a {
+     float: left;
+     display: block;
+     color: #f2f2f2;
+     text-align: center;
+     padding: 14px 50px;
+     text-decoration: none;
+     font-size: 17px;
+}
+
+.topnav a:hover {
+     background-color: orange;
+     color: black;
+}
+
+.topnav a.active {
+     background-color: #4caf50;
+     color: white;
+}
+
+.topnav .icon {
+     display: none;
+}
+
+@media screen and (max-width: 600px) {
+     .topnav a:not(:first-child) {
+          display: none;
+     }
+     .topnav a.icon {
+          float: right;
+          display: block;
+     }
+}
+
+@media screen and (max-width: 600px) {
+     .topnav.responsive {
+          position: relative;
+     }
+     .topnav.responsive .icon {
+          position: absolute;
+          right: 0;
+          top: 0;
+     }
+     .topnav.responsive a {
+          float: none;
+          display: block;
+          text-align: left;
+     }
+}
+@media screen and (max-width: 600px) {
+     #button1 {
+          width: 150px;
+          font-size: 20px;
+          color: white;
+          height: 50px;
+          opacity: 0.8;
+          border-radius: 15px;
+          font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+               Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+               sans-serif;
+          background-color: black;
+          text-align: center;
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translateX(-120%) translateY(+40%);
+     }
+
+     #button1:hover {
+          background-color: orange;
+          cursor: pointer;
+     }
+     #button2 {
+          width: 150px;
+          font-size: 20px;
+          color: white;
+          opacity: 0.8;
+          height: 50px;
+          border-radius: 15px;
+          background-color: black;
+          text-align: center;
+          font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+               Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+               sans-serif;
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translateX(20%) translateY(+40%);
+     }
+
+     #button2:hover {
+          background-color: green;
+          cursor: pointer;
+     }
+}
 #button1 {
      width: 150px;
      font-size: 20px;
@@ -41,36 +142,4 @@ a:hover {
 #button2:hover {
      background-color: green;
      cursor: pointer;
-}
-ul {
-     list-style-type: none;
-     margin: 0;
-     padding: 0;
-     overflow: hidden;
-     background-color: black;
-}
-li {
-     float: left;
-     font-size: 20px;
-     font-family: fantasy;
-}
-li a {
-     display: block;
-     padding: 14px 130px;
-     color: white;
-     text-align: center;
-     text-decoration: none;
-}
-li a:visited {
-     color: white;
-}
-li a:hover {
-     color: orange;
-}
-html {
-     background: url(back.png) no-repeat center center fixed;
-     -webkit-background-size: cover;
-     -moz-background-size: cover;
-     -o-background-size: cover;
-     background-size: cover;
 }
