--- a/public/css/selectOption.css
+++ b/public/css/selectOption.css
@@ -1,7 +1,13 @@
 body {
      margin: 0;
 }
-
+html {
+     background: url(back.png) no-repeat center center fixed;
+     -webkit-background-size: cover;
+     -moz-background-size: cover;
+     -o-background-size: cover;
+     background-size: cover;
+}
 .topnav {
      overflow: hidden;
      background-color: black;
