--- a/public/css/selectOption.css
+++ b/public/css/selectOption.css
@@ -61,6 +61,15 @@ html {
           display: block;
           text-align: left;
      }
+     .topnav a {
+     float: left;
+     display: block;
+     color: #f2f2f2;
+     text-align: center;
+     padding: 14px 20px;
+     text-decoration: none;
+     font-size: 17px;
+}
 }
 @media screen and (max-width: 600px) {
      #button1 {
