--- a/public/css/selectOption.css
+++ b/public/css/selectOption.css
@@ -11,6 +11,7 @@ html {
 .topnav {
      overflow: hidden;
      background-color: black;
+     opacity: 0.8;
      font-family: "Courier New", Courier, monospace;
 }
 
@@ -19,7 +20,7 @@ html {
      display: block;
      color: #f2f2f2;
      text-align: center;
-     padding: 14px 100px;
+     padding: 14px 115px;
      text-decoration: none;
      font-size: 17px;
 }
