--- a/public/css/selectOption.css
+++ b/public/css/selectOption.css
@@ -10,7 +10,7 @@ html {
 }
 .topnav {
      overflow: hidden;
-     background-color: black;
+     background: linear-gradient(to bottom right, #2c3e50 0%, #bdc3c7 100%);
      opacity: 0.8;
      font-family: "Courier New", Courier, monospace;
 }
@@ -34,7 +34,6 @@ html {
      display: none;
 }
 .topnav a.active{
-     background-color: green;
      color: white;
 }
 
