--- a/public/css/intro.css
+++ b/public/css/intro.css
@@ -1,5 +1,10 @@
 body{
      margin: 0;
+     padding: 0;
+     display: flex;
+     justify-content: center;
+     height: 100vh;
+     overflow: hidden;
 }
 .section {
      width: 100%;
