--- a/public/css/intro.css
+++ b/public/css/intro.css
@@ -23,7 +23,7 @@ body{
 }
 
 h2 {
-     font-size: 50px;
+/*      font-size: 50px;
      width: 35%;
      background-color: black;
      margin: auto;
@@ -38,7 +38,20 @@ h2 {
      top: 50%;
      left: 50%;
      transform: translateX(-49%) translateY(-310%);
-     animation: text 3s 1;
+     animation: text 3s 1; */
+     position: relative;
+     top: 20%;
+     font-family: sans-serif;
+     text-transform: uppercase;
+     font-size: 2em;
+     letter-spacing: 4px;
+     overflow: hidden;
+     background: linear-gradient(90deg, #000, #fff, #000);
+     background-repeat: no-repeat;
+     background-size: 80%;
+     animation: animate 3s linear infinite;
+     -webkit-background-clip: text;
+     -webkit-text-fill-color: rgba(255, 255, 255, 0);
 }
 @keyframes text {
      0% {
