--- a/public/css/intro.css
+++ b/public/css/intro.css
@@ -53,7 +53,7 @@ h2 {
      -webkit-background-clip: text;
      -webkit-text-fill-color: rgba(255, 255, 255, 0);
 }
-@keyframes text {
+/* @keyframes text {
      0% {
           color: black;
      }
@@ -63,7 +63,15 @@ h2 {
      85% {
           letter-spacing: 0px;
      }
-}     
+}      */
+@keyframes animate {
+     0% {
+          background-position: -500%;
+     }
+     100% {
+          background-position: 500%;
+     }
+}
 #button {
      width: 15%;
      font-size: 22px;
