--- a/public/css/intro.css
+++ b/public/css/intro.css
@@ -11,8 +11,8 @@ body{
      height: 100vh;
      display: flex;
      position: relative;
-     align-items: center;
-     justify-content: center;
+/*      align-items: center;
+     justify-content: center; */
      overflow: hidden;
 }
 .video-container {
