--- a/public/css/intro.css
+++ b/public/css/intro.css
@@ -2,7 +2,7 @@ body{
      margin: 0;
      padding: 0;
      display: flex;
-/*      justify-content: center; */
+     justify-content: center;
      height: 100vh;
      overflow: hidden;
 }
@@ -11,8 +11,8 @@ body{
      height: 100vh;
      display: flex;
      position: relative;
-/*      align-items: center;
-     justify-content: center; */
+     align-items: center;
+     justify-content: center;
      overflow: hidden;
 }
 .video-container {
@@ -40,7 +40,7 @@ h2 {
      transform: translateX(-49%) translateY(-310%);
      animation: text 3s 1; */
      position: relative;
-/*      top: 5%; */
+     top: 20%;
      font-family: sans-serif;
      text-transform: uppercase;
      font-size: 2em;
