--- a/public/css/intro.css
+++ b/public/css/intro.css
@@ -39,6 +39,7 @@ h2 {
      animation: text 3s 1; */
      position: relative;
      top: 20%;
+     left:50%;
      font-family: sans-serif;
      text-transform: uppercase;
      font-size: 2em;
