--- a/public/css/intro.css
+++ b/public/css/intro.css
@@ -40,9 +40,9 @@ h2 {
      position: relative;
      top: 20%;
      left:50%;
-     font-family: sans-serif;
+     font-family: "Goldman";
      text-transform: uppercase;
-     font-size: 2em;
+     font-size: 35px;
      letter-spacing: 4px;
      overflow: hidden;
      background: linear-gradient(90deg, #000, #fff, #000);
