--- a/public/css/intro.css
+++ b/public/css/intro.css
@@ -21,38 +21,23 @@ body{
 }
 
 h2 {
-/*      font-size: 50px;
+     font-size: 50px;
      width: 35%;
-     background-color: black;
+/*      background-color: black; */
      margin: auto;
      padding: 5px 5px 10px 5px;
      font-weight: bolder;
-     color: white;
+     color: black;
      text-align: center;
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+     font-family: "Goldman"
      position: absolute;
      opacity: 0.5;
-     top: 50%;
+/*      top: 50%; */
      left: 50%;
-     transform: translateX(-49%) translateY(-310%);
-     animation: text 3s 1; */
-     position: relative;
-     top: 20%;
-     left:35%;
-     font-family: "Goldman";
-     text-transform: uppercase;
-     font-size: 35px;
-     letter-spacing: 4px;
-     overflow: hidden;
-/*      background: linear-gradient(90deg, #000, #fff, #000); */
-     background-repeat: no-repeat;
-     background-size: 80%;
-     animation: animate 3s linear infinite;
-     -webkit-background-clip: text;
-/*      -webkit-text-fill-color: rgba(255, 255, 255, 0); */
+/*      transform: translateX(-49%) translateY(-310%); */
+     animation: text 3s 1;     
 }
-/* @keyframes text {
+@keyframes text {
      0% {
           color: black;
      }
@@ -62,15 +47,7 @@ h2 {
      85% {
           letter-spacing: 0px;
      }
-}      */
-@keyframes animate {
-     0% {
-          background-position: -500%;
-     }
-     100% {
-          background-position: 500%;
-     }
-}
+}     
 #button {
      width: 15%;
      font-size: 22px;
