--- a/public/css/intro.css
+++ b/public/css/intro.css
@@ -19,10 +19,10 @@ body{
 
 h2 {
      font-size: 50px;
-     width: 35%;
+/*      width: 35%; */
 /*      background-color: black; */
      margin: auto;
-     padding: 5px 5px 10px 5px;
+/*      padding: 5px 5px 10px 5px; */
      font-weight: bolder;
      color: black;
 /*      text-align: center; */
