--- a/public/css/intro.css
+++ b/public/css/intro.css
@@ -19,18 +19,13 @@ body{
 
 h2 {
      font-size: 50px;
-/*      width: 35%; */
-/*      background-color: black; */
      margin: auto;
-/*      padding: 5px 5px 10px 5px; */
      font-weight: bolder;
      color: black;
-/*      text-align: center; */
      font-family: "Goldman";
-     position: absolute;
+/*      position: absolute; */
      top: 20%;
 /*      left: 50%; */
-/*      transform: translateX(-49%) translateY(-310%); */
      animation: text 3s 1;     
 }
 @keyframes text {
