--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -25,7 +25,7 @@ a {
 }
 .container {
      width: 50%;
-     height: 100vh;
+     height: 100%;
      /*background-image: url("formBack.png");*/
      background: linear-gradient(to bottom right, #2c3e50 0%, #bdc3c7 100%);
      padding: 30px 30px 30px 60px;
