--- a/public/css/msignup.css
+++ b/public/css/msignup.css
@@ -42,17 +42,13 @@ select {
      cursor: pointer;
 }
 .container {
-     width: 90%;
-     /*height: 100%;*/
+     width: 100%;
+     height: 100%;
      padding:  20px 20px 30px 30px;
      opacity: 0.8;
      border-radius: 30px;
      background: linear-gradient(to bottom right, #2c3e50 0%, #bdc3c7 100%);
-     top: 50%;
-     left: 50%;
      margin: auto;
-     position: absolute;
-     transform: translateX(-50%) translateY(-50%);
      /*background: url(formBack.png) no-repeat center center fixed;
      -webkit-background-size: cover;
      -moz-background-size: cover;
