--- a/public/css/mlogin.css
+++ b/public/css/mlogin.css
@@ -48,7 +48,7 @@ html {
 h1 {
      font-family:"Poppins";
      font-size: 25px;
-     color: white;
+     color: black;
      text-align: center;
      letter-spacing: 1px;
 }
