--- a/public/css/mintro.css
+++ b/public/css/mintro.css
@@ -21,8 +21,7 @@ h2 {
      font-weight: bolder;
      color: white;
      text-align: center;
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+     font-family: "Goldman";
      border: 5px solid orange;
      position: absolute;
      opacity: 0.4;
