--- a/public/css/mintro.css
+++ b/public/css/mintro.css
@@ -16,15 +16,12 @@ h2 {
      font-size: 32px;
      margin: auto;
      width: 70%;
-     background-color: black;
      padding: 10px;
      font-weight: bolder;
-     color: white;
+     color: black;
      text-align: center;
      font-family: "Goldman";
-     border: 5px solid orange;
      position: absolute;
-     opacity: 0.4;
      top: 50%;
      left: 50%;
      transform: translateX(-49%) translateY(-420%);
