--- a/public/css/mintro.css
+++ b/public/css/mintro.css
@@ -37,6 +37,9 @@ h2 {
      85% {
           letter-spacing: 0px;
      }
+     100%{
+          color: black;
+     }
 }     
 #button {
      width: 37%;
