--- a/public/css/mintro.css
+++ b/public/css/mintro.css
@@ -13,7 +13,7 @@ video{
 }
 
 h2 {
-     font-size: 32px;
+     font-size: 35px;
      margin: auto;
      width: 70%;
      padding: 10px;
@@ -21,6 +21,7 @@ h2 {
      color: black;
      text-align: center;
      font-family: "Goldman";
+     letter-spacing: 1px;
      position: absolute;
      top: 50%;
      left: 50%;
