--- a/public/css/mintro.css
+++ b/public/css/mintro.css
@@ -36,7 +36,10 @@ h2 {
           letter-spacing: 3px;
      }
      85% {
-          letter-spacing: 0px;
+          letter-spacing: 1px;
+     }
+     100% {
+          letter-spacing: 1px;
      }
 }     
 #button {
