--- a/public/css/mintro.css
+++ b/public/css/mintro.css
@@ -1,3 +1,8 @@
+* {
+      margin: 0;
+      padding: 0;
+      border: 0;
+}
 html {
      background: url(mBack.png) no-repeat center center fixed;
      -webkit-background-size: cover;
