--- a/public/css/mlogin.css
+++ b/public/css/mlogin.css
@@ -65,7 +65,7 @@ h2 {
 .input-box input {
      padding: 5px 5px 5px 30px;
      border-radius: 5px;
-     /*border: 3px solid white;*/
+     border: 3px solid white;
      font-family: "Poppins";
      font-size: 12px;
      color: white;
