--- a/public/css/mlogin.css
+++ b/public/css/mlogin.css
@@ -55,7 +55,7 @@ h1 {
      letter-spacing: 1px;
 }
 h2 {
-     font-family: "Poppins";
+     font-family: "Open Sans";
      font-size: 14px;
      color: white;
      letter-spacing: 1px;
