--- a/public/css/mlogin.css
+++ b/public/css/mlogin.css
@@ -48,7 +48,7 @@ html {
 }
 
 h1 {
-     font-family:"Open Sans";
+     font-family:"Karla";
      font-size: 25px;
      color: black;
      text-align: center;
