--- a/public/css/mlogin.css
+++ b/public/css/mlogin.css
@@ -48,7 +48,7 @@ html {
 }
 
 h1 {
-     font-family:"Poppins";
+     font-family:"Open Sans";
      font-size: 25px;
      color: black;
      text-align: center;
@@ -70,7 +70,7 @@ h2 {
      font-size: 12px;
      color: white;
      background: transparent;
-     width: 85%;
+     width: 90%;
 }
 .input-box input:focus {
      border: 3px solid green;
