--- a/public/css/msignup.css
+++ b/public/css/msignup.css
@@ -46,7 +46,7 @@ select {
 }
 .container {
      width: 100%;
-     height: 100vh;
+     /*height: 100vh;*/
      padding:  20px 20px 30px 30px;
      opacity: 0.8;
      background: linear-gradient(to bottom right, #2c3e50 0%, #bdc3c7 100%);
@@ -55,7 +55,11 @@ select {
      -webkit-background-size: cover;
      -moz-background-size: cover;
      -o-background-size: cover;
-     background-size: cover;*/   
+     background-size: cover;*/
+     position: absolute;
+     top: 50%; 
+     left: 50%;
+     transform: translateX(-50%) translateY(-50%);
 }
 
 h1 {
