--- a/public/css/intro.css
+++ b/public/css/intro.css
@@ -2,76 +2,47 @@
      margin: 0;
      padding: 0;
      border: 0;
+     box-sizing: border-box;
+     overflow: hidden;
 }
-body{
+html,
+body {
      margin: 0;
      padding: 0;
-     overflow: hidden;
+     background: url(back.png) no-repeat center center fixed;
+     -webkit-background-size: cover;
+     -moz-background-size: cover;
+     -o-background-size: cover;
+     background-size: cover;
 }
-.section {
-     width: 100%;
+.container {
+     width: 50%;
      height: 100vh;
-     display: flex;
-     position: relative;
-     overflow: hidden;
-}
-.video-container {
      position: absolute;
-     top: 0;
-     left: 0;
-     width: 100%;
+     right: 0;
 }
-
-h2 {
-     font-size: 50px;
-     margin: auto;
-     font-weight: bolder;
+.container h2 {
      color: black;
      font-family: "Goldman";
+     font-size: 50px;
+     width: 100%;
      position: absolute;
      top: 20%;
-     left: 40%;
-     animation: text 3s 1;     
+     left: 20%;
 }
-@keyframes text {
-     0% {
-          color: black;
-     }
-     35% {
-          letter-spacing: 5px;
-     }
-     85% {
-          letter-spacing: 0px;
-     }
-}     
+
 #button {
-     width: 15%;
-     font-size: 22px;
-     opacity: 0.8;
      color: white;
-     height: 50px;
-     border-radius: 10px;
-     border: 3px solid white;
-     background-color: black;
-     text-align: center;
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+     font-family: "Open Sans";
+     font-size: 18px;
+     width: 30%;
+     padding: 10px;
      position: absolute;
      top: 50%;
      left: 50%;
-     transform: translateX(-50%) translateY(+145%);
-}
-
-#button:hover {
-     background-color: green;
      cursor: pointer;
+     border: 3px solid white;
+     border-radius: 10px;
+     background-color: green;
+     transform: translateX(-50%) translateY(150%);
 }
-
-/* body
-    {
-        background-image:url(back.jpg);
-        background-size:cover;
-        /* background-attachment:fixed; */
-/* background-position:center;
-        background-repeat: no-repeat; */
-/* } */
