--- a/public/css/mintro.css
+++ b/public/css/mintro.css
@@ -1,72 +1,48 @@
 * {
-      margin: 0;
-      padding: 0;
-      border: 0;
+     margin: 0;
+     padding: 0;
+     border: 0;
+     box-sizing: border-box;
+     overflow: hidden;
 }
-html {
+html,
+body {
+     margin: 0;
+     padding: 0;
      background: url(mBack.png) no-repeat center center fixed;
      -webkit-background-size: cover;
      -moz-background-size: cover;
      -o-background-size: cover;
      background-size: cover;
 }
-body {
-     margin: 0;
+.container {
+     width: 50%;
+     height: 100vh;
+     position: absolute;
+     right: 0;
 }
-video{
-     display: none;
-}
-
-h2 {
-     font-size: 35px;
-     margin: auto;
-     width: 100%;
-     padding: 10px;
-     font-weight: bolder;
+.container h2 {
      color: black;
-     text-align: center;
      font-family: "Goldman";
-     letter-spacing: 1px;
+     font-size: 50px;
+     width: 100%;
      position: absolute;
-     top: 50%;
-     left: 50%;
-     transform: translateX(-49%) translateY(-420%);
-     animation: text 3s 1;
+     top: 20%;
+     left: 20%;
 }
-@keyframes text {
-     0% {
-          color: black;
-     }
-     35% {
-          letter-spacing: 3px;
-     }
-     85% {
-          letter-spacing: 1px;
-     }
-     100% {
-          letter-spacing: 1px;
-     }
-}     
+
 #button {
-     width: 37%;
-     font-size: 22px;
-     opacity: 0.8;
      color: white;
-     height: 50px;
-     border-radius: 10px;
-     border: 3px solid white;
-     background-color: black;
-     text-align: center;
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+     font-family: "Open Sans";
+     font-size: 18px;
+     width: 30%;
+     padding: 10px;
      position: absolute;
      top: 50%;
      left: 50%;
-     transform: translateX(-50%) translateY(+100%);
-}
-
-#button:hover {
-     background-color: green;
      cursor: pointer;
+     border: 3px solid white;
+     border-radius: 10px;
+     background-color: green;
+     transform: translateX(-50%) translateY(150%);
 }
-
