--- a/public/css/intro.css
+++ b/public/css/intro.css
@@ -23,6 +23,7 @@ body {
 }
 .container h2 {
      color: black;
+     background: transparent;
      font-family: "Goldman";
      font-size: 50px;
      width: 100%;
