--- a/public/css/login.css
+++ b/public/css/login.css
@@ -3,6 +3,9 @@
 }
 * {
      box-sizing: border-box;
+     margin: 0;
+     padding: 0;
+     border: 0;
 }
 a:hover {
      color: orange;
@@ -80,13 +83,12 @@ h2 {
 }
 #button {
      width: 40%;
-     background-color: black;
+     background-color: green;
      color: white;
      padding: 4px 4px 7px 4px;
      border: 3px solid orange;
      border-radius: 12px;
      text-align: center;
-     opacity: 0.8;
      font-family: "Poppins";
      font-size: 18px;
      letter-spacing: 1px;
