--- a/public/css/login.css
+++ b/public/css/login.css
@@ -43,9 +43,9 @@ html {
 }
 
 h1 {
-     font-family: "Poppins";
-     font-size: 25px;
-     color: white;
+     font-family: "Open Sans";
+     font-size: 30px;
+     color: black;
      text-align: center;
      letter-spacing: 1px;
 }
@@ -54,6 +54,7 @@ h2 {
      font-size: 16px;
      color: white;
      letter-spacing: 1px;
+     padding: 5px 0 5px 0;
 }
 
 .input-box input {
