--- a/public/css/login.css
+++ b/public/css/login.css
@@ -54,7 +54,7 @@ h2 {
      font-size: 16px;
      color: white;
      letter-spacing: 1px;
-     padding: 5px 0 5px 0;
+     padding: 10px 0 5px 0;
 }
 
 .input-box input {
@@ -86,11 +86,11 @@ h2 {
      width: 40%;
      background-color: green;
      color: white;
-     padding: 4px 4px 7px 4px;
+     padding: 5px;
      border: 3px solid orange;
      border-radius: 12px;
      text-align: center;
-     font-family: "Poppins";
+     font-family: "Open Sans";
      font-size: 18px;
      letter-spacing: 1px;
 }
