--- a/public/css/login.css
+++ b/public/css/login.css
@@ -54,7 +54,7 @@ h2 {
      font-size: 16px;
      color: white;
      letter-spacing: 1px;
-     padding: 10px 0 5px 0;
+     padding: 20px 0 5px 0;
 }
 
 .input-box input {
@@ -87,8 +87,8 @@ h2 {
      background-color: green;
      color: white;
      padding: 5px;
-     border: 3px solid orange;
-     border-radius: 12px;
+     border: 3px solid white;
+     border-radius: 10px;
      text-align: center;
      font-family: "Open Sans";
      font-size: 18px;
