--- a/public/css/msignup.css
+++ b/public/css/msignup.css
@@ -58,7 +58,7 @@ select {
 h1 {
      font-family: "Open Sans";
      font-size: 25px;
-     color: black;
+     color: white;
      text-align: center;
      letter-spacing: 1px;
 }
@@ -72,7 +72,7 @@ h2 {
 .input-box input {
      padding: 5px 5px 5px 30px;
      border-radius: 5px;
-     border: 3px solid white;
+     border: 2px solid white;
      font-family: "Poppins";
      font-size: 12px;
      color: white;
@@ -80,7 +80,7 @@ h2 {
      width: 85%;
 }
 .input-box input:focus {
-     border: 3px solid green;
+     border: 2px solid green;
 }
 
 .input-box i {
