--- a/public/css/login.css
+++ b/public/css/login.css
@@ -68,7 +68,7 @@ h2 {
      width: 70%;
 }
 .input-box input:focus {
-     border-color: #336b89;
+     border-color: 2px solid #336b89;
 }
 
 .input-box i {
