--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -72,7 +72,7 @@ select {
      cursor: pointer;
 }
 select:focus {
-     border: 2px solid green;
+     border: 2px solid #336b89;
 }
 
 .input-box input {
