--- a/public/css/msignup.css
+++ b/public/css/msignup.css
@@ -80,7 +80,7 @@ h2 {
      width: 85%;
 }
 .input-box input:focus {
-     border: 2px solid green;
+     border: 2px solid #336b89;
 }
 
 .input-box i {
