--- a/views/selectOption.hbs
+++ b/views/selectOption.hbs
@@ -7,6 +7,10 @@
                rel="stylesheet"
                href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
           />
+           <link
+               rel="stylesheet"
+               href="https://fonts.googleapis.com/css?family=Open+Sans|Poppins&effect=anaglyph|fire"
+          />
           <link rel="stylesheet" href="/css/selectOption.css" />
           <link rel="icon" href="icon.png" type="image/png" />
      </head>
