--- a/public/css/selectOption.css
+++ b/public/css/selectOption.css
@@ -1,3 +1,8 @@
+*{
+     border: 0;
+     margin: 0;
+     padding: 0;
+}
 body {
      margin: 0;
 }
@@ -12,7 +17,7 @@ html {
      overflow: hidden;
      background: linear-gradient(to bottom right, #2c3e50 0%, #bdc3c7 100%);
      opacity: 0.8;
-     font-family: "Courier New", Courier, monospace;
+     font-family: "Poppins";
 }
 
 .topnav a {
@@ -72,16 +77,15 @@ html {
 }
 @media screen and (max-width: 600px) {
      #button1 {
-          width: 150px;
+          width: 30%;
           font-size: 20px;
           color: white;
-          height: 50px;
-          opacity: 0.8;
+          padding: 7px;
           border-radius: 15px;
-          font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-               Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+          border: 3px solid white;
+          font-family: "Open Sans",
                sans-serif;
-          background-color: black;
+          background-color: green;
           text-align: center;
           position: absolute;
           top: 50%;
@@ -90,21 +94,18 @@ html {
      }
 
      #button1:hover {
-          background-color: orange;
           cursor: pointer;
      }
      #button2 {
-          width: 150px;
+          width: 30%;
           font-size: 20px;
           color: white;
-          opacity: 0.8;
-          height: 50px;
+          padding: 7px;
           border-radius: 15px;
-          background-color: black;
+          border: 3px solid white;
+          background-color: green;
           text-align: center;
-          font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-               Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
-               sans-serif;
+          font-family: "Open Sans";
           position: absolute;
           top: 50%;
           left: 50%;
@@ -112,7 +113,6 @@ html {
      }
 
      #button2:hover {
-          background-color: green;
           cursor: pointer;
      }
      html {
@@ -125,15 +125,14 @@ html {
    }
 }
 #button1 {
-     width: 150px;
+     width: 30%;
      font-size: 20px;
      color: white;
-     height: 50px;
-     opacity: 0.8;
+     padding: 10px;
      border-radius: 10px;
-     background-color: black;
+     background-color: green;
      text-align: center;
-     font-family: fantasy;
+     font-family: "Open Sans";
      position: absolute;
      top: 50%;
      left: 50%;
@@ -141,19 +140,17 @@ html {
 }
 
 #button1:hover {
-     background-color: orange;
      cursor: pointer;
 }
 #button2 {
-     width: 150px;
+     width: 30%;
      font-size: 20px;
      color: white;
-     opacity: 0.8;
-     height: 50px;
+     padding: 10px;
      border-radius: 10px;
-     background-color: black;
+     background-color: green;
      text-align: center;
-     font-family: fantasy;
+     font-family: "Poppins";
      position: absolute;
      top: 50%;
      left: 50%;
@@ -161,6 +158,5 @@ html {
 }
 
 #button2:hover {
-     background-color: green;
      cursor: pointer;
 }
