--- a/public/css/selectOption.css
+++ b/public/css/selectOption.css
@@ -25,7 +25,7 @@ html {
      display: block;
      color: #f2f2f2;
      text-align: center;
-     padding: 14px 126px;
+     padding: 12.5px 126.5px;
      text-decoration: none;
      font-size: 17px;
 }
@@ -70,21 +70,20 @@ html {
      display: block;
      color: #f2f2f2;
      text-align: center;
-     padding: 14px 20px;
+     padding: 13px 20px;
      text-decoration: none;
      font-size: 17px;
 }
 }
 @media screen and (max-width: 600px) {
      #button1 {
-          width: 30%;
+          width: 35%;
           font-size: 20px;
           color: white;
-          padding: 7px;
+          padding: 5px;
           border-radius: 15px;
           border: 3px solid white;
-          font-family: "Open Sans",
-               sans-serif;
+          font-family: "Open Sans";
           background-color: green;
           text-align: center;
           position: absolute;
@@ -97,10 +96,10 @@ html {
           cursor: pointer;
      }
      #button2 {
-          width: 30%;
+          width: 35%;
           font-size: 20px;
           color: white;
-          padding: 7px;
+          padding: 5px;
           border-radius: 15px;
           border: 3px solid white;
           background-color: green;
@@ -125,11 +124,12 @@ html {
    }
 }
 #button1 {
-     width: 30%;
+     width: 20%;
      font-size: 20px;
      color: white;
-     padding: 10px;
+     padding: 8px;
      border-radius: 10px;
+     border: 3px solid white;
      background-color: green;
      text-align: center;
      font-family: "Open Sans";
@@ -143,14 +143,14 @@ html {
      cursor: pointer;
 }
 #button2 {
-     width: 30%;
+     width: 20%;
      font-size: 20px;
      color: white;
-     padding: 10px;
+     padding: 8px;
      border-radius: 10px;
-     background-color: green;
+     background-color: #336b89;
      text-align: center;
-     font-family: "Poppins";
+     font-family: "Open Sans";
      position: absolute;
      top: 50%;
      left: 50%;
