--- a/public/css/selectOption.css
+++ b/public/css/selectOption.css
@@ -77,7 +77,7 @@ html {
 }
 @media screen and (max-width: 600px) {
      #button1 {
-          width: 35%;
+          width: 45%;
           font-size: 20px;
           color: white;
           padding: 5px;
@@ -96,7 +96,7 @@ html {
           cursor: pointer;
      }
      #button2 {
-          width: 35%;
+          width: 45%;
           font-size: 20px;
           color: white;
           padding: 5px;
@@ -148,6 +148,7 @@ html {
      color: white;
      padding: 8px;
      border-radius: 10px;
+     border: 3px solid white;
      background-color: #336b89;
      text-align: center;
      font-family: "Open Sans";
